fixed image overflow

--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -15,3 +15,6 @@ img:hover {
   transform: scale(1.05);
   transition: ease-in-out 0.3s;
 }
+.card {
+  overflow: hidden;
+}
